fix the panel overflow

--- a/public/stylesheets/jumbotron-narrow.css
+++ b/public/stylesheets/jumbotron-narrow.css
@@ -14,7 +14,7 @@ body {
 
 /* Custom page header */
 .header {
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   margin-bottom: 20px;
   border-bottom: 1px solid #e5e5e5;
 }
