--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,7 +15,7 @@ a.nostyle-a:hover {
 .post{
   background-color: #eeeeee;
   padding: 10px;
-  margin-top: 20px; 
+  margin-top: 20px;
   margin-bottom: 20px;
   font-size: 1em;
 }
@@ -43,6 +43,10 @@ a.nostyle-a:hover {
 
 .post .content{
   font-size: 1.2em;
+}
+
+.panel-body  {
+    word-break: break-all;
 }
 
 footer{
